fixed invisible <li> element

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -838,7 +838,7 @@ nav ul li.tag-h1 {
 }
 nav ul li.tag-h1 a {
   font-weight: bold;
-  color: #333;
+  color: #999;
 }
 nav ul li.tag-h2 + .tag-h1 {
   margin-top: 10px;
